Finish CSSM without DFS (good outcomes!)

--- a/validation/compare_outcomes_once.ipynb
+++ b/validation/compare_outcomes_once.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -60,58 +60,31 @@
      "output_type": "stream",
      "text": [
       "-- intro to ../results-2024-01-28-flights.csv --\n",
-      "otp {'actual': 0.8657701091093631, 'sim': 0.30499873128647553}\n",
-      "delay {'actual': 21528.0, 'sim': 192821.0}\n",
-      "cancel {'actual': 0.0, 'sim': 430}\n",
-      "flight hours {'actual': 8028.033333333334, 'sim': 7733.883333333333}\n",
+      "otp {'actual': 0.8657701091093631, 'sim': 0.7475260086272519}\n",
+      "delay {'actual': 21528.0, 'sim': 43805.0}\n",
+      "cancel {'actual': 0.0, 'sim': 5}\n",
+      "flight hours {'actual': 8028.033333333334, 'sim': 8559.095833333333}\n",
       "-- intro to ../results-2024-01-28-nodisrupt-flights.csv --\n",
-      "otp {'actual': 0.8657701091093631, 'sim': 0.9855366658208576}\n",
-      "delay {'actual': 21528.0, 'sim': 2630.0}\n",
-      "cancel {'actual': 0.0, 'sim': 3}\n",
-      "flight hours {'actual': 8028.033333333334, 'sim': 8559.833333333334}\n",
-      "-- intro to ../results-2024-01-28-aircraftdfs-flights.csv --\n",
-      "otp {'actual': 0.8657701091093631, 'sim': 0.31692463841664553}\n",
-      "delay {'actual': 21528.0, 'sim': 200541.0}\n",
-      "cancel {'actual': 0.0, 'sim': 545}\n",
-      "flight hours {'actual': 8028.033333333334, 'sim': 7486.75}\n",
-      "-- intro to ../results-2024-01-28-nodisrupt-aircraftdfs-flights.csv --\n",
-      "otp {'actual': 0.8657701091093631, 'sim': 0.9774168992641462}\n",
-      "delay {'actual': 21528.0, 'sim': 3775.0}\n",
-      "cancel {'actual': 0.0, 'sim': 28}\n",
-      "flight hours {'actual': 8028.033333333334, 'sim': 8502.083333333334}\n",
-      "-- intro to ../results-2024-01-28-bumpup-flights.csv --\n",
-      "otp {'actual': 0.8657701091093631, 'sim': 0.37934534382136514}\n",
-      "delay {'actual': 21528.0, 'sim': 159864.0}\n",
-      "cancel {'actual': 0.0, 'sim': 366}\n",
-      "flight hours {'actual': 8028.033333333334, 'sim': 7865.866666666667}\n",
-      "-- intro to ../results-2024-01-28-aircraftdfs-bumpup-flights.csv --\n",
-      "otp {'actual': 0.8657701091093631, 'sim': 0.38239025628013196}\n",
-      "delay {'actual': 21528.0, 'sim': 169209.0}\n",
-      "cancel {'actual': 0.0, 'sim': 455}\n",
-      "flight hours {'actual': 8028.033333333334, 'sim': 7685.05}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_121988/596192501.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n"
+      "otp {'actual': 0.8657701091093631, 'sim': 0.9824917533620908}\n",
+      "delay {'actual': 21528.0, 'sim': 2875.0}\n",
+      "cancel {'actual': 0.0, 'sim': 2}\n",
+      "flight hours {'actual': 8028.033333333334, 'sim': 8563.25}\n"
      ]
     }
    ],
    "source": [
     "comp2024 = prep_intro_comp(actual_2024, '../results-2024-01-28-flights.csv')\n",
     "comp2024_nodisrupt = prep_intro_comp(actual_2024, '../results-2024-01-28-nodisrupt-flights.csv')\n",
-    "comp2024_dfs = prep_intro_comp(actual_2024, '../results-2024-01-28-aircraftdfs-flights.csv')\n",
-    "comp2024_dfs_nodisrupt = prep_intro_comp(actual_2024, '../results-2024-01-28-nodisrupt-aircraftdfs-flights.csv')\n",
+    "# comp2024_dfs = prep_intro_comp(actual_2024, '../results-2024-01-28-aircraftdfs-flights.csv')\n",
+    "# comp2024_dfs_nodisrupt = prep_intro_comp(actual_2024, '../results-2024-01-28-nodisrupt-aircraftdfs-flights.csv')\n",
     "\n",
-    "comp2024_bumpup = prep_intro_comp(actual_2024, '../results-2024-01-28-bumpup-flights.csv')\n",
-    "comp2024_dfs_bumpup = prep_intro_comp(actual_2024, '../results-2024-01-28-aircraftdfs-bumpup-flights.csv')"
+    "# comp2024_bumpup = prep_intro_comp(actual_2024, '../results-2024-01-28-bumpup-flights.csv')\n",
+    "# comp2024_dfs_bumpup = prep_intro_comp(actual_2024, '../results-2024-01-28-aircraftdfs-bumpup-flights.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -138,33 +111,23 @@
      "output_type": "stream",
      "text": [
       "-- intro to ../results-2022-12-22-flights.csv --\n",
-      "otp {'actual': 0.28586013272077593, 'sim': 0.1610515569167943}\n",
-      "delay {'actual': 154511.0, 'sim': 295387.0}\n",
-      "cancel {'actual': 1026.0, 'sim': 1257}\n",
-      "flight hours {'actual': 5942.416666666667, 'sim': 5727.083333333333}\n",
+      "otp {'actual': 0.28586013272077593, 'sim': 0.19014803471158753}\n",
+      "delay {'actual': 154511.0, 'sim': 198882.0}\n",
+      "cancel {'actual': 1026.0, 'sim': 1118}\n",
+      "flight hours {'actual': 5942.416666666667, 'sim': 5844.133333333333}\n",
       "-- intro to ../results-2022-12-22-nodisrupt-flights.csv --\n",
-      "otp {'actual': 0.28586013272077593, 'sim': 0.9338948443083206}\n",
-      "delay {'actual': 154511.0, 'sim': 16120.0}\n",
-      "cancel {'actual': 1026.0, 'sim': 4}\n",
-      "flight hours {'actual': 5942.416666666667, 'sim': 8285.833333333334}\n",
-      "-- intro to ../results-2022-12-22-aircraftdfs-flights.csv --\n",
-      "otp {'actual': 0.28586013272077593, 'sim': 0.183256763654926}\n",
-      "delay {'actual': 154511.0, 'sim': 218547.0}\n",
-      "cancel {'actual': 1026.0, 'sim': 1523}\n",
-      "flight hours {'actual': 5942.416666666667, 'sim': 5079.85}\n",
-      "-- intro to ../results-2022-12-22-nodisrupt-aircraftdfs-flights.csv --\n",
-      "otp {'actual': 0.28586013272077593, 'sim': 0.7611026033690659}\n",
-      "delay {'actual': 154511.0, 'sim': 12665.0}\n",
-      "cancel {'actual': 1026.0, 'sim': 834}\n",
-      "flight hours {'actual': 5942.416666666667, 'sim': 6511.916666666667}\n"
+      "otp {'actual': 0.28586013272077593, 'sim': 0.9155181214905564}\n",
+      "delay {'actual': 154511.0, 'sim': 23685.0}\n",
+      "cancel {'actual': 1026.0, 'sim': 9}\n",
+      "flight hours {'actual': 5942.416666666667, 'sim': 8275.583333333334}\n"
      ]
     }
    ],
    "source": [
     "comp2022 = prep_intro_comp(actual_2022, '../results-2022-12-22-flights.csv')\n",
     "comp2022_nodisrupt = prep_intro_comp(actual_2022, '../results-2022-12-22-nodisrupt-flights.csv')\n",
-    "comp2022_dfs = prep_intro_comp(actual_2022, '../results-2022-12-22-aircraftdfs-flights.csv')\n",
-    "comp2022_dfs_nodisrupt = prep_intro_comp(actual_2022, '../results-2022-12-22-nodisrupt-aircraftdfs-flights.csv')"
+    "# comp2022_dfs = prep_intro_comp(actual_2022, '../results-2022-12-22-aircraftdfs-flights.csv')\n",
+    "# comp2022_dfs_nodisrupt = prep_intro_comp(actual_2022, '../results-2022-12-22-nodisrupt-aircraftdfs-flights.csv')"
    ]
   },
   {
